fix(css): prevent sidebar overlap on narrow screens

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -108,6 +108,7 @@ body {
   }
 
   .sidebar {
+    position: static;
     flex: 0 0 100%;
     padding-right: 0;
     margin-right: 0;
